markdown-pages/en/tidb/release-7.5/TOC.md
<!-- markdownlint-disable MD007 -->
<!-- markdownlint-disable MD041 -->

- About TiDB Self-Managed
  - [What is TiDB Self-Managed](/overview.md)
  - [TiDB 7.5 Release Notes](/releases/release-7.5.0.md)
  - [Features](/basic-features.md)
  - [MySQL Compatibility](/mysql-compatibility.md)
  - [TiDB Limitations](/tidb-limitations.md)
  - [Credits](/credits.md)
- Quick Start
  - [Try Out TiDB](/quick-start-with-tidb.md)
  - [Try Out HTAP](/quick-start-with-htap.md)
  - [Learn TiDB SQL](/basic-sql-operations.md)
  - [Learn HTAP](/explore-htap.md)
  - [Import Example Database](/import-example-data.md)
- Develop
  - [Overview](/develop/dev-guide-overview.md)
  - Quick Start
    - [Build a TiDB Cloud Starter Cluster](/develop/dev-guide-build-cluster-in-cloud.md)
    - [CRUD SQL in TiDB](/develop/dev-guide-tidb-crud-sql.md)
  - Example Applications
    - Java
      - [JDBC](/develop/dev-guide-sample-application-java-jdbc.md)
      - [MyBatis](/develop/dev-guide-sample-application-java-mybatis.md)
      - [Hibernate](/develop/dev-guide-sample-application-java-hibernate.md)
      - [Spring Boot](/develop/dev-guide-sample-application-java-spring-boot.md)
    - Go
      - [Go-MySQL-Driver](/develop/dev-guide-sample-application-golang-sql-driver.md)
      - [GORM](/develop/dev-guide-sample-application-golang-gorm.md)
    - Python
      - [mysqlclient](/develop/dev-guide-sample-application-python-mysqlclient.md)
      - [MySQL Connector/Python](/develop/dev-guide-sample-application-python-mysql-connector.md)
      - [PyMySQL](/develop/dev-guide-sample-application-python-pymysql.md)
      - [SQLAlchemy](/develop/dev-guide-sample-application-python-sqlalchemy.md)
      - [peewee](/develop/dev-guide-sample-application-python-peewee.md)
      - [Django](/develop/dev-guide-sample-application-python-django.md)
    - Node.js
      - [node-mysql2](/develop/dev-guide-sample-application-nodejs-mysql2.md)
      - [mysql.js](/develop/dev-guide-sample-application-nodejs-mysqljs.md)
      - [Prisma](/develop/dev-guide-sample-application-nodejs-prisma.md)
      - [Sequelize](/develop/dev-guide-sample-application-nodejs-sequelize.md)
      - [TypeORM](/develop/dev-guide-sample-application-nodejs-typeorm.md)
      - [Next.js](/develop/dev-guide-sample-application-nextjs.md)
      - [AWS Lambda](/develop/dev-guide-sample-application-aws-lambda.md)
    - Ruby
      - [mysql2](/develop/dev-guide-sample-application-ruby-mysql2.md)
      - [Rails](/develop/dev-guide-sample-application-ruby-rails.md)
  - Connect to TiDB
    - GUI Database Tools
      - [JetBrains DataGrip](/develop/dev-guide-gui-datagrip.md)
      - [DBeaver](/develop/dev-guide-gui-dbeaver.md)
      - [VS Code](/develop/dev-guide-gui-vscode-sqltools.md)
      - [MySQL Workbench](/develop/dev-guide-gui-mysql-workbench.md)
      - [Navicat](/develop/dev-guide-gui-navicat.md)
    - [Choose Driver or ORM](/develop/dev-guide-choose-driver-or-orm.md)
    - [Connect to TiDB](/develop/dev-guide-connect-to-tidb.md)
    - [Connection Pools and Connection Parameters](/develop/dev-guide-connection-parameters.md)
  - Design Database Schema
    - [Overview](/develop/dev-guide-schema-design-overview.md)
    - [Create a Database](/develop/dev-guide-create-database.md)
    - [Create a Table](/develop/dev-guide-create-table.md)
    - [Create a Secondary Index](/develop/dev-guide-create-secondary-indexes.md)
  - Write Data
    - [Insert Data](/develop/dev-guide-insert-data.md)
    - [Update Data](/develop/dev-guide-update-data.md)
    - [Delete Data](/develop/dev-guide-delete-data.md)
    - [Periodically Delete Data Using Time to Live](/time-to-live.md)
    - [Prepared Statements](/develop/dev-guide-prepared-statement.md)
  - Read Data
    - [Query Data from a Single Table](/develop/dev-guide-get-data-from-single-table.md)
    - [Multi-table Join Queries](/develop/dev-guide-join-tables.md)
    - [Subquery](/develop/dev-guide-use-subqueries.md)
    - [Paginate Results](/develop/dev-guide-paginate-results.md)
    - [Views](/develop/dev-guide-use-views.md)
    - [Temporary Tables](/develop/dev-guide-use-temporary-tables.md)
    - [Common Table Expression](/develop/dev-guide-use-common-table-expression.md)
    - Read Replica Data
      - [Follower Read](/develop/dev-guide-use-follower-read.md)
      - [Stale Read](/develop/dev-guide-use-stale-read.md)
    - [HTAP Queries](/develop/dev-guide-hybrid-oltp-and-olap-queries.md)
  - Transaction
    - [Overview](/develop/dev-guide-transaction-overview.md)
    - [Optimistic and Pessimistic Transactions](/develop/dev-guide-optimistic-and-pessimistic-transaction.md)
    - [Transaction Restraints](/develop/dev-guide-transaction-restraints.md)
    - [Handle Transaction Errors](/develop/dev-guide-transaction-troubleshoot.md)
  - Optimize
    - [Overview](/develop/dev-guide-optimize-sql-overview.md)
    - [SQL Performance Tuning](/develop/dev-guide-optimize-sql.md)
    - [Best Practices for Performance Tuning](/develop/dev-guide-optimize-sql-best-practices.md)
    - [Best Practices for Indexing](/develop/dev-guide-index-best-practice.md)
    - Other Optimization Methods
      - [Avoid Implicit Type Conversions](/develop/dev-guide-implicit-type-conversion.md)
      - [Unique Serial Number Generation](/develop/dev-guide-unique-serial-number-generation.md)
  - Troubleshoot
    - [SQL or Transaction Issues](/develop/dev-guide-troubleshoot-overview.md)
    - [Unstable Result Set](/develop/dev-guide-unstable-result-set.md)
    - [Timeouts](/develop/dev-guide-timeouts-in-tidb.md)
  - Reference
    - [Bookshop Example Application](/develop/dev-guide-bookshop-schema-design.md)
    - Guidelines
      - [Object Naming Convention](/develop/dev-guide-object-naming-guidelines.md)
      - [SQL Development Specifications](/develop/dev-guide-sql-development-specification.md)
  - Cloud Native Development Environment
    - [Gitpod](/develop/dev-guide-playground-gitpod.md)
  - Third-Party Support
    - [Third-Party Tools Supported by TiDB](/develop/dev-guide-third-party-support.md)
    - [Known Incompatibility Issues with Third-Party Tools](/develop/dev-guide-third-party-tools-compatibility.md)
    - [ProxySQL Integration Guide](/develop/dev-guide-proxysql-integration.md)
    - [Amazon AppFlow Integration Guide](/develop/dev-guide-aws-appflow-integration.md)
- Deploy
  - [Software and Hardware Requirements](/hardware-and-software-requirements.md)
  - [Environment Configuration Checklist](/check-before-deployment.md)
  - Plan Cluster Topology
    - [Minimal Topology](/minimal-deployment-topology.md)
    - [TiFlash Topology](/tiflash-deployment-topology.md)
    - [TiCDC Topology](/ticdc-deployment-topology.md)
    - [TiDB Binlog Topology](/tidb-binlog-deployment-topology.md)
    - [TiSpark Topology](/tispark-deployment-topology.md)
    - [Cross-DC Topology](/geo-distributed-deployment-topology.md)
    - [Hybrid Topology](/hybrid-deployment-topology.md)
  - Install and Start
    - [Use TiUP](/production-deployment-using-tiup.md)
    - [Deploy on Kubernetes](/tidb-in-kubernetes.md)
  - [Verify Cluster Status](/post-installation-check.md)
  - Test Cluster Performance
    - [Test TiDB Using Sysbench](/benchmark/benchmark-tidb-using-sysbench.md)
    - [Test TiDB Using TPC-C](/benchmark/benchmark-tidb-using-tpcc.md)
    - [Test TiDB Using CH-benCHmark](/benchmark/benchmark-tidb-using-ch.md)
- Migrate
  - [Overview](/migration-overview.md)
  - [Migration Tools](/migration-tools.md)
  - [Import Best Practices](/tidb-lightning/data-import-best-practices.md)
  - Migration Scenarios
    - [Migrate from Aurora](/migrate-aurora-to-tidb.md)
    - [Migrate Small Datasets from MySQL](/migrate-small-mysql-to-tidb.md)
    - [Migrate Large Datasets from MySQL](/migrate-large-mysql-to-tidb.md)
    - [Migrate and Merge MySQL Shards of Small Datasets](/migrate-small-mysql-shards-to-tidb.md)
    - [Migrate and Merge MySQL Shards of Large Datasets](/migrate-large-mysql-shards-to-tidb.md)
    - [Migrate from MariaDB](/migrate-from-mariadb.md)
    - [Migrate from CSV Files](/migrate-from-csv-files-to-tidb.md)
    - [Migrate from SQL Files](/migrate-from-sql-files-to-tidb.md)
    - [Migrate from Parquet Files](/migrate-from-parquet-files-to-tidb.md)
    - [Migrate from One TiDB Cluster to Another TiDB Cluster](/migrate-from-tidb-to-tidb.md)
    - [Migrate from TiDB to MySQL-compatible Databases](/migrate-from-tidb-to-mysql.md)
  - Advanced Migration
    - [Continuous Replication with gh-ost or pt-osc](/migrate-with-pt-ghost.md)
    - [Migrate to a Downstream Table with More Columns](/migrate-with-more-columns-downstream.md)
    - [Filter Binlog Events](/filter-binlog-event.md)
    - [Filter DML Events Using SQL Expressions](/filter-dml-event.md)
- Integrate
  - [Overview](/integration-overview.md)
  - Integration Scenarios
    - [Integrate with Confluent and Snowflake](/ticdc/integrate-confluent-using-ticdc.md)
    - [Integrate with Apache Kafka and Apache Flink](/replicate-data-to-kafka.md)
- Maintain
  - Security
    - [Best Practices for TiDB Security Configuration](/best-practices-for-security-configuration.md)
    - [Enable TLS Between TiDB Clients and Servers](/enable-tls-between-clients-and-servers.md)
    - [Enable TLS Between TiDB Components](/enable-tls-between-components.md)
    - [Generate Self-signed Certificates](/generate-self-signed-certificates.md)
    - [Encryption at Rest](/encryption-at-rest.md)
    - [Enable Encryption for Disk Spill](/enable-disk-spill-encrypt.md)
    - [Log Redaction](/log-redaction.md)
  - Upgrade
    - [Use TiUP](/upgrade-tidb-using-tiup.md)
    - [Use TiDB Operator](https://docs.pingcap.com/tidb-in-kubernetes/stable/upgrade-a-tidb-cluster)
    - [TiDB Smooth Upgrade](/smooth-upgrade-tidb.md)
    - [Migrate and Upgrade a TiDB Cluster](/tidb-upgrade-migration-guide.md)
    - [TiFlash Upgrade Guide](/tiflash-upgrade-guide.md)
  - Scale
    - [Use TiUP (Recommended)](/scale-tidb-using-tiup.md)
    - [Use TiDB Operator](https://docs.pingcap.com/tidb-in-kubernetes/stable/scale-a-tidb-cluster)
  - Backup and Restore
    - [Overview](/br/backup-and-restore-overview.md)
    - Architecture
      - [Architecture Overview](/br/backup-and-restore-design.md)
      - [Snapshot Backup and Restore Architecture](/br/br-snapshot-architecture.md)
      - [Log Backup and PITR Architecture](/br/br-log-architecture.md)
    - Use BR
      - [Use Overview](/br/br-use-overview.md)
      - [Snapshot Backup and Restore Guide](/br/br-snapshot-guide.md)
      - [Log Backup and PITR Guide](/br/br-pitr-guide.md)
      - [Use Cases](/br/backup-and-restore-use-cases.md)
      - [Backup Storages](/br/backup-and-restore-storages.md)
    - BR CLI Manuals
      - [Overview](/br/use-br-command-line-tool.md)
      - [Snapshot Backup and Restore Command Manual](/br/br-snapshot-manual.md)
      - [Log Backup and PITR Command Manual](/br/br-pitr-manual.md)
    - References
      - BR Features
        - [Backup Auto-Tune](/br/br-auto-tune.md)
        - [Batch Create Table](/br/br-batch-create-table.md)
        - [Checkpoint Backup](/br/br-checkpoint-backup.md)
        - [Checkpoint Restore](/br/br-checkpoint-restore.md)
      - [Back up and Restore Data Using Dumpling and TiDB Lightning](/backup-and-restore-using-dumpling-lightning.md)
      - [Back Up and Restore RawKV](/br/rawkv-backup-and-restore.md)
      - [Incremental Backup and Restore](/br/br-incremental-guide.md)
  - Cluster Disaster Recovery (DR)
    - [DR Solutions Overview](/dr-solution-introduction.md)
    - [Primary-Secondary DR](/dr-secondary-cluster.md)
    - [Multi-Replica Cluster DR](/dr-multi-replica.md)
    - [BR-based DR](/dr-backup-restore.md)
  - [Resource Control](/tidb-resource-control.md)
  - [Configure Time Zone](/configure-time-zone.md)
  - [Daily Checklist](/daily-check.md)
  - [Maintain TiFlash](/tiflash/maintain-tiflash.md)
  - [Maintain TiDB Using TiUP](/maintain-tidb-using-tiup.md)
  - [Modify Configuration Dynamically](/dynamic-config.md)
  - [Online Unsafe Recovery](/online-unsafe-recovery.md)
  - [Replicate Data Between Primary and Secondary Clusters](/replicate-between-primary-and-secondary-clusters.md)
- Monitor and Alert
  - [Monitoring Framework Overview](/tidb-monitoring-framework.md)
  - [Monitoring API](/tidb-monitoring-api.md)
  - [Deploy Monitoring Services](/deploy-monitoring-services.md)
  - [Upgrade Monitoring Services](/upgrade-monitoring-services.md)
  - TiDB Dashboard
    - [Overview](/dashboard/dashboard-intro.md)
    - Maintain
      - [Deploy](/dashboard/dashboard-ops-deploy.md)
      - [Reverse Proxy](/dashboard/dashboard-ops-reverse-proxy.md)
      - [User Management](/dashboard/dashboard-user.md)
      - [Secure](/dashboard/dashboard-ops-security.md)
    - [Access](/dashboard/dashboard-access.md)
    - [Overview Page](/dashboard/dashboard-overview.md)
    - [Cluster Info Page](/dashboard/dashboard-cluster-info.md)
    - [Top SQL Page](/dashboard/top-sql.md)
    - [Key Visualizer Page](/dashboard/dashboard-key-visualizer.md)
    - [Metrics Relation Graph](/dashboard/dashboard-metrics-relation.md)
    - SQL Statements Analysis
      - [SQL Statements Page](/dashboard/dashboard-statement-list.md)
      - [SQL Details Page](/dashboard/dashboard-statement-details.md)
    - [Slow Queries Page](/dashboard/dashboard-slow-query.md)
    - Cluster Diagnostics
      - [Access Cluster Diagnostics Page](/dashboard/dashboard-diagnostics-access.md)
      - [View Diagnostics Report](/dashboard/dashboard-diagnostics-report.md)
      - [Use Diagnostics](/dashboard/dashboard-diagnostics-usage.md)
    - [Monitoring Page](/dashboard/dashboard-monitoring.md)
    - [Search Logs Page](/dashboard/dashboard-log-search.md)
    - [Resource Manager Page](/dashboard/dashboard-resource-manager.md)
    - Instance Profiling
      - [Manual Profiling](/dashboard/dashboard-profiling.md)
      - [Continuous Profiling](/dashboard/continuous-profiling.md)
    - Session Management and Configuration
      - [Share Session](/dashboard/dashboard-session-share.md)
      - [Configure SSO](/dashboard/dashboard-session-sso.md)
    - [FAQ](/dashboard/dashboard-faq.md)
  - [Export Grafana Snapshots](/exporting-grafana-snapshots.md)
  - [TiDB Cluster Alert Rules](/alert-rules.md)
  - [TiFlash Alert Rules](/tiflash/tiflash-alert-rules.md)
  - [Customize Configurations of Monitoring Servers](/tiup/customized-montior-in-tiup-environment.md)
  - [BR Monitoring and Alert](/br/br-monitoring-and-alert.md)
- Troubleshoot
  - Issue Summary
    - [TiDB Troubleshooting Map](/tidb-troubleshooting-map.md)
    - [Troubleshoot TiDB Cluster Setup](/troubleshoot-tidb-cluster.md)
    - [Troubleshoot TiFlash](/tiflash/troubleshoot-tiflash.md)
  - Issue Scenarios
    - Slow Queries
      - [Identify Slow Queries](/identify-slow-queries.md)
      - [Analyze Slow Queries](/analyze-slow-queries.md)
    - [TiDB OOM](/troubleshoot-tidb-oom.md)
    - [Hotspot](/troubleshoot-hot-spot-issues.md)
    - [Increased Read and Write Latency](/troubleshoot-cpu-issues.md)
    - [Write Conflicts in Optimistic Transactions](/troubleshoot-write-conflicts.md)
    - [High Disk I/O Usage](/troubleshoot-high-disk-io.md)
    - [Lock Conflicts](/troubleshoot-lock-conflicts.md)
    - [Inconsistency Between Data and Indexes](/troubleshoot-data-inconsistency-errors.md)
  - Diagnostic Methods
    - [SQL Diagnostics](/information-schema/information-schema-sql-diagnostics.md)
    - [Statement Summary Tables](/statement-summary-tables.md)
    - [Identify Expensive Queries Using Top SQL](/dashboard/top-sql.md)
    - [Identify Expensive Queries Using Logs](/identify-expensive-queries.md)
    - [Save and Restore the On-Site Information of a Cluster](/sql-plan-replayer.md)
    - [Understanding Stale Read and safe-ts in TiKV](/troubleshoot-stale-read.md)
  - [Support Resources](/support.md)
- Performance Tuning
  - Tuning Guide
    - [Performance Tuning Overview](/performance-tuning-overview.md)
    - [Performance Analysis and Tuning](/performance-tuning-methods.md)
    - [Performance Tuning Practices for OLTP Scenarios](/performance-tuning-practices.md)
    - [TiFlash Performance Analysis Methods](/tiflash-performance-tuning-methods.md)
    - [TiCDC Performance Analysis Methods](/ticdc-performance-tuning-methods.md)
    - [Latency Breakdown](/latency-breakdown.md)
    - [TiDB Best Practices on Public Cloud](/best-practices-on-public-cloud.md)
  - Configuration Tuning
    - [Tune Operating System Performance](/tune-operating-system.md)
    - [Tune TiDB Memory](/configure-memory-usage.md)
    - [Tune TiKV Threads](/tune-tikv-thread-performance.md)
    - [Tune TiKV Memory](/tune-tikv-memory-performance.md)
    - [TiKV Follower Read](/follower-read.md)
    - [Tune Region Performance](/tune-region-performance.md)
    - [Tune TiFlash Performance](/tiflash/tune-tiflash-performance.md)
    - [Coprocessor Cache](/coprocessor-cache.md)
    - Garbage Collection (GC)
      - [Overview](/garbage-collection-overview.md)
      - [Configuration](/garbage-collection-configuration.md)
  - SQL Tuning
    - [Overview](/sql-tuning-overview.md)
    - Understanding the Query Execution Plan
      - [Overview](/explain-overview.md)
      - [`EXPLAIN` Walkthrough](/explain-walkthrough.md)
      - [Indexes](/explain-indexes.md)
      - [Joins](/explain-joins.md)
      - [MPP Queries](/explain-mpp.md)
      - [Subqueries](/explain-subqueries.md)
      - [Aggregation](/explain-aggregation.md)
      - [Views](/explain-views.md)
      - [Partitions](/explain-partitions.md)
      - [Index Merge](/explain-index-merge.md)
    - SQL Optimization Process
      - [Overview](/sql-optimization-concepts.md)
      - Logic Optimization
        - [Overview](/sql-logical-optimization.md)
        - [Subquery Related Optimizations](/subquery-optimization.md)
        - [Column Pruning](/column-pruning.md)
        - [Decorrelation of Correlated Subquery](/correlated-subquery-optimization.md)
        - [Eliminate Max/Min](/max-min-eliminate.md)
        - [Predicates Push Down](/predicate-push-down.md)
        - [Partition Pruning](/partition-pruning.md)
        - [TopN and Limit Push Down](/topn-limit-push-down.md)
        - [Join Reorder](/join-reorder.md)
        - [Derive TopN or Limit from Window Functions](/derive-topn-from-window.md)
      - Physical Optimization
        - [Overview](/sql-physical-optimization.md)
        - [Index Selection](/choose-index.md)
        - [Statistics](/statistics.md)
        - [Extended Statistics](/extended-statistics.md)
        - [Wrong Index Solution](/wrong-index-solution.md)
        - [Distinct Optimization](/agg-distinct-optimization.md)
        - [Cost Model](/cost-model.md)
        - [Runtime Filter](/runtime-filter.md)
      - [Prepared Execution Plan Cache](/sql-prepared-plan-cache.md)
      - [Non-Prepared Execution Plan Cache](/sql-non-prepared-plan-cache.md)
    - Control Execution Plans
      - [Overview](/control-execution-plan.md)
      - [Optimizer Hints](/optimizer-hints.md)
      - [SQL Plan Management](/sql-plan-management.md)
      - [The Blocklist of Optimization Rules and Expression Pushdown](/blocklist-control-plan.md)
      - [Optimizer Fix Controls](/optimizer-fix-controls.md)
- Tutorials
  - [Multiple Availability Zones in One Region Deployment](/multi-data-centers-in-one-city-deployment.md)
  - [Three Availability Zones in Two Regions Deployment](/three-data-centers-in-two-cities-deployment.md)
  - [Two Availability Zones in One Region Deployment](/two-data-centers-in-one-city-deployment.md)
  - Read Historical Data
    - Use Stale Read (Recommended)
      - [Usage Scenarios of Stale Read](/stale-read.md)
      - [Perform Stale Read Using `As OF TIMESTAMP`](/as-of-timestamp.md)
      - [Perform Stale Read Using `tidb_read_staleness`](/tidb-read-staleness.md)
      - [Perform Stale Read Using `tidb_external_ts`](/tidb-external-ts.md)
    - [Use the `tidb_snapshot` System Variable](/read-historical-data.md)
  - Best Practices
    - [Use TiDB](/best-practices/tidb-best-practices.md)
    - [Java Application Development](/best-practices/java-app-best-practices.md)
    - [Use HAProxy](/best-practices/haproxy-best-practices.md)
    - [Highly Concurrent Write](/best-practices/high-concurrency-best-practices.md)
    - [Grafana Monitoring](/best-practices/grafana-monitor-best-practices.md)
    - [PD Scheduling](/best-practices/pd-scheduling-best-practices.md)
    - [TiKV Performance Tuning with Massive Regions](/best-practices/massive-regions-best-practices.md)
    - [Three-node Hybrid Deployment](/best-practices/three-nodes-hybrid-deployment.md)
    - [Local Read Under Three Data Centers Deployment](/best-practices/three-dc-local-read.md)
    - [Use UUIDs](/best-practices/uuid.md)
    - [Read-Only Storage Nodes](/best-practices/readonly-nodes.md)
  - [Use Placement Rules](/configure-placement-rules.md)
  - [Use Load Base Split](/configure-load-base-split.md)
  - [Use Store Limit](/configure-store-limit.md)
  - [DDL Execution Principles and Best Practices](/ddl-introduction.md)
- TiDB Tools
  - [Overview](/ecosystem-tool-user-guide.md)
  - [Use Cases](/ecosystem-tool-user-case.md)
  - [Download](/download-ecosystem-tools.md)
  - TiUP
    - [Documentation Map](/tiup/tiup-documentation-guide.md)
    - [Overview](/tiup/tiup-overview.md)
    - [Terminology and Concepts](/tiup/tiup-terminology-and-concepts.md)
    - [Manage TiUP Components](/tiup/tiup-component-management.md)
    - [FAQ](/tiup/tiup-faq.md)
    - [Troubleshooting Guide](/tiup/tiup-troubleshooting-guide.md)
    - Command Reference
      - [Overview](/tiup/tiup-reference.md)
      - TiUP Commands
        - [tiup clean](/tiup/tiup-command-clean.md)
        - [tiup completion](/tiup/tiup-command-completion.md)
        - [tiup env](/tiup/tiup-command-env.md)
        - [tiup help](/tiup/tiup-command-help.md)
        - [tiup install](/tiup/tiup-command-install.md)
        - [tiup list](/tiup/tiup-command-list.md)
        - tiup mirror
          - [Overview](/tiup/tiup-command-mirror.md)
          - [tiup mirror clone](/tiup/tiup-command-mirror-clone.md)
          - [tiup mirror genkey](/tiup/tiup-command-mirror-genkey.md)
          - [tiup mirror grant](/tiup/tiup-command-mirror-grant.md)
          - [tiup mirror init](/tiup/tiup-command-mirror-init.md)
          - [tiup mirror merge](/tiup/tiup-command-mirror-merge.md)
          - [tiup mirror modify](/tiup/tiup-command-mirror-modify.md)
          - [tiup mirror publish](/tiup/tiup-command-mirror-publish.md)
          - [tiup mirror rotate](/tiup/tiup-command-mirror-rotate.md)
          - [tiup mirror set](/tiup/tiup-command-mirror-set.md)
          - [tiup mirror sign](/tiup/tiup-command-mirror-sign.md)
        - [tiup status](/tiup/tiup-command-status.md)
        - [tiup telemetry](/tiup/tiup-command-telemetry.md)
        - [tiup uninstall](/tiup/tiup-command-uninstall.md)
        - [tiup update](/tiup/tiup-command-update.md)
      - TiUP Cluster Commands
        - [Overview](/tiup/tiup-component-cluster.md)
        - [tiup cluster audit](/tiup/tiup-component-cluster-audit.md)
        - [tiup cluster audit cleanup](/tiup/tiup-component-cluster-audit-cleanup.md)
        - [tiup cluster check](/tiup/tiup-component-cluster-check.md)
        - [tiup cluster clean](/tiup/tiup-component-cluster-clean.md)
        - [tiup cluster deploy](/tiup/tiup-component-cluster-deploy.md)
        - [tiup cluster destroy](/tiup/tiup-component-cluster-destroy.md)
        - [tiup cluster disable](/tiup/tiup-component-cluster-disable.md)
        - [tiup cluster display](/tiup/tiup-component-cluster-display.md)
        - [tiup cluster edit-config](/tiup/tiup-component-cluster-edit-config.md)
        - [tiup cluster enable](/tiup/tiup-component-cluster-enable.md)
        - [tiup cluster help](/tiup/tiup-component-cluster-help.md)
        - [tiup cluster import](/tiup/tiup-component-cluster-import.md)
        - [tiup cluster list](/tiup/tiup-component-cluster-list.md)
        - [tiup cluster meta backup](/tiup/tiup-component-cluster-meta-backup.md)
        - [tiup cluster meta restore](/tiup/tiup-component-cluster-meta-restore.md)
        - [tiup cluster patch](/tiup/tiup-component-cluster-patch.md)
        - [tiup cluster prune](/tiup/tiup-component-cluster-prune.md)
        - [tiup cluster reload](/tiup/tiup-component-cluster-reload.md)
        - [tiup cluster rename](/tiup/tiup-component-cluster-rename.md)
        - [tiup cluster replay](/tiup/tiup-component-cluster-replay.md)
        - [tiup cluster restart](/tiup/tiup-component-cluster-restart.md)
        - [tiup cluster scale-in](/tiup/tiup-component-cluster-scale-in.md)
        - [tiup cluster scale-out](/tiup/tiup-component-cluster-scale-out.md)
        - [tiup cluster start](/tiup/tiup-component-cluster-start.md)
        - [tiup cluster stop](/tiup/tiup-component-cluster-stop.md)
        - [tiup cluster template](/tiup/tiup-component-cluster-template.md)
        - [tiup cluster tls](/tiup/tiup-component-cluster-tls.md)
        - [tiup cluster upgrade](/tiup/tiup-component-cluster-upgrade.md)
      - TiUP DM Commands
        - [Overview](/tiup/tiup-component-dm.md)
        - [tiup dm audit](/tiup/tiup-component-dm-audit.md)
        - [tiup dm deploy](/tiup/tiup-component-dm-deploy.md)
        - [tiup dm destroy](/tiup/tiup-component-dm-destroy.md)
        - [tiup dm disable](/tiup/tiup-component-dm-disable.md)
        - [tiup dm display](/tiup/tiup-component-dm-display.md)
        - [tiup dm edit-config](/tiup/tiup-component-dm-edit-config.md)
        - [tiup dm enable](/tiup/tiup-component-dm-enable.md)
        - [tiup dm help](/tiup/tiup-component-dm-help.md)
        - [tiup dm import](/tiup/tiup-component-dm-import.md)
        - [tiup dm list](/tiup/tiup-component-dm-list.md)
        - [tiup dm patch](/tiup/tiup-component-dm-patch.md)
        - [tiup dm prune](/tiup/tiup-component-dm-prune.md)
        - [tiup dm reload](/tiup/tiup-component-dm-reload.md)
        - [tiup dm replay](/tiup/tiup-component-dm-replay.md)
        - [tiup dm restart](/tiup/tiup-component-dm-restart.md)
        - [tiup dm scale-in](/tiup/tiup-component-dm-scale-in.md)
        - [tiup dm scale-out](/tiup/tiup-component-dm-scale-out.md)
        - [tiup dm start](/tiup/tiup-component-dm-start.md)
        - [tiup dm stop](/tiup/tiup-component-dm-stop.md)
        - [tiup dm template](/tiup/tiup-component-dm-template.md)
        - [tiup dm upgrade](/tiup/tiup-component-dm-upgrade.md)
    - [TiDB Cluster Topology Reference](/tiup/tiup-cluster-topology-reference.md)
    - [DM Cluster Topology Reference](/tiup/tiup-dm-topology-reference.md)
    - [Mirror Reference Guide](/tiup/tiup-mirror-reference.md)
    - TiUP Components
      - [tiup-playground](/tiup/tiup-playground.md)
      - [tiup-cluster](/tiup/tiup-cluster.md)
      - [tiup-mirror](/tiup/tiup-mirror.md)
      - [tiup-bench](/tiup/tiup-bench.md)
  - [TiDB Operator](/tidb-operator-overview.md)
  - TiDB Data Migration
    - [About TiDB Data Migration](/dm/dm-overview.md)
    - [Architecture](/dm/dm-arch.md)
    - [Quick Start](/dm/quick-start-with-dm.md)
    - [Best Practices](/dm/dm-best-practices.md)
    - Deploy a DM cluster
      - [Hardware and Software Requirements](/dm/dm-hardware-and-software-requirements.md)
      - [Use TiUP (Recommended)](/dm/deploy-a-dm-cluster-using-tiup.md)
      - [Use TiUP Offline](/dm/deploy-a-dm-cluster-using-tiup-offline.md)
      - [Use Binary](/dm/deploy-a-dm-cluster-using-binary.md)
      - [Use Kubernetes](https://docs.pingcap.com/tidb-in-kubernetes/v1.5/deploy-tidb-dm)
    - Tutorials
      - [Create a Data Source](/dm/quick-start-create-source.md)
      - [Manage Data Sources](/dm/dm-manage-source.md)
      - [Configure Tasks](/dm/dm-task-configuration-guide.md)
      - [Shard Merge](/dm/dm-shard-merge.md)
      - [Table Routing](/dm/dm-table-routing.md)
      - [Block and Allow Lists](/dm/dm-block-allow-table-lists.md)
      - [Binlog Event Filter](/dm/dm-binlog-event-filter.md)
      - [Filter DMLs Using SQL Expressions](/dm/feature-expression-filter.md)
      - [Online DDL Tool Support](/dm/dm-online-ddl-tool-support.md)
      - Manage a Data Migration Task
        - [Precheck a Task](/dm/dm-precheck.md)
        - [Create a Task](/dm/dm-create-task.md)
        - [Query Status](/dm/dm-query-status.md)
        - [Pause a Task](/dm/dm-pause-task.md)
        - [Resume a Task](/dm/dm-resume-task.md)
        - [Stop a Task](/dm/dm-stop-task.md)
    - Advanced Tutorials
      - Merge and Migrate Data from Sharded Tables
        - [Overview](/dm/feature-shard-merge.md)
        - [Pessimistic Mode](/dm/feature-shard-merge-pessimistic.md)
        - [Optimistic Mode](/dm/feature-shard-merge-optimistic.md)
        - [Manually Handle Sharding DDL Lock](/dm/manually-handling-sharding-ddl-locks.md)
      - [Migrate from MySQL Databases that Use GH-ost/PT-osc](/dm/feature-online-ddl.md)
      - [Migrate Data to a Downstream TiDB Table with More Columns](/migrate-with-more-columns-downstream.md)
      - [Continuous Data Validation](/dm/dm-continuous-data-validation.md)
    - Maintain
      - Cluster Upgrade
        - [Maintain DM Clusters Using TiUP (Recommended)](/dm/maintain-dm-using-tiup.md)
        - [Manually Upgrade from v1.0.x to v2.0+](/dm/manually-upgrade-dm-1.0-to-2.0.md)
      - Tools
        - [Manage Using WebUI](/dm/dm-webui-guide.md)
        - [Manage Using dmctl](/dm/dmctl-introduction.md)
      - Performance Tuning
        - [Benchmarks](/dm/dm-benchmark-v5.4.0.md)
        - [Optimize Configurations](/dm/dm-tune-configuration.md)
        - [Test DM Performance](/dm/dm-performance-test.md)
        - [Handle Performance Issues](/dm/dm-handle-performance-issues.md)
      - Manage Data Sources
        - [Switch the MySQL Instance to Be Migrated](/dm/usage-scenario-master-slave-switch.md)
      - Manage Tasks
        - [Handle Failed DDL Statements](/dm/handle-failed-ddl-statements.md)
        - [Manage Schemas of Tables to be Migrated](/dm/dm-manage-schema.md)
      - [Export and Import Data Sources and Task Configurations of Clusters](/dm/dm-export-import-config.md)
      - [Handle Alerts](/dm/dm-handle-alerts.md)
      - [Daily Check](/dm/dm-daily-check.md)
    - Reference
      - Architecture
        - [DM-worker](/dm/dm-worker-intro.md)
        - [Safe Mode](/dm/dm-safe-mode.md)
        - [Relay Log](/dm/relay-log.md)
        - [DDL Handling](/dm/dm-ddl-compatible.md)
      - Mechanism
        - [DML Replication Mechanism](/dm/dm-replication-logic.md)
      - Command Line
        - [DM-master & DM-worker](/dm/dm-command-line-flags.md)
      - Configuration Files
        - [Overview](/dm/dm-config-overview.md)
        - [Upstream Database Configurations](/dm/dm-source-configuration-file.md)
        - [Task Configurations](/dm/task-configuration-file-full.md)
        - [DM-master Configuration](/dm/dm-master-configuration-file.md)
        - [DM-worker Configuration](/dm/dm-worker-configuration-file.md)
        - [Table Selector](/dm/table-selector.md)
      - [OpenAPI](/dm/dm-open-api.md)
      - [Compatibility Catalog](/dm/dm-compatibility-catalog.md)
      - Secure
        - [Enable TLS for DM Connections](/dm/dm-enable-tls.md)
        - [Generate Self-signed Certificates](/dm/dm-generate-self-signed-certificates.md)
      - Monitoring and Alerts
        - [Monitoring Metrics](/dm/monitor-a-dm-cluster.md)
        - [Alert Rules](/dm/dm-alert-rules.md)
      - [Error Codes](/dm/dm-error-handling.md#handle-common-errors)
      - [Glossary](/dm/dm-glossary.md)
      - Example
        - [Migrate Data Using DM](/dm/migrate-data-using-dm.md)
        - [Create a Data Migration Task](/dm/quick-start-create-task.md)
        - [Best Practices of Data Migration in the Shard Merge Scenario](/dm/shard-merge-best-practices.md)
      - Troubleshoot
        - [FAQ](/dm/dm-faq.md)
        - [Handle Errors](/dm/dm-error-handling.md)
      - [Release Notes](/dm/dm-release-notes.md)
  - TiDB Lightning
    - [Overview](/tidb-lightning/tidb-lightning-overview.md)
    - [Get Started](/get-started-with-tidb-lightning.md)
    - [Deploy TiDB Lightning](/tidb-lightning/deploy-tidb-lightning.md)
    - [Target Database Requirements](/tidb-lightning/tidb-lightning-requirements.md)
    - Data Sources
      - [Data Match Rules](/tidb-lightning/tidb-lightning-data-source.md)
      - [Rename databases and tables](/tidb-lightning/tidb-lightning-data-source.md#rename-databases-and-tables)
      - [CSV](/tidb-lightning/tidb-lightning-data-source.md#csv)
      - [SQL](/tidb-lightning/tidb-lightning-data-source.md#sql)
      - [Parquet](/tidb-lightning/tidb-lightning-data-source.md#parquet)
      - [Compressed files](/tidb-lightning/tidb-lightning-data-source.md#compressed-files)
      - [Customized File](/tidb-lightning/tidb-lightning-data-source.md#match-customized-files)
      - [Import data from Amazon S3](/tidb-lightning/tidb-lightning-data-source.md#import-data-from-amazon-s3)
    - Physical Import Mode
      - [Requirements and Limitations](/tidb-lightning/tidb-lightning-physical-import-mode.md)
      - [Use Physical Import Mode](/tidb-lightning/tidb-lightning-physical-import-mode-usage.md)
    - Logical Import Mode
      - [Requirements and Limitations](/tidb-lightning/tidb-lightning-logical-import-mode.md)
      - [Use Logical Import Mode](/tidb-lightning/tidb-lightning-logical-import-mode-usage.md)
    - [Prechecks](/tidb-lightning/tidb-lightning-prechecks.md)
    - [Table Filter](/table-filter.md)
    - [Checkpoints](/tidb-lightning/tidb-lightning-checkpoints.md)
    - [Import Data in Parallel](/tidb-lightning/tidb-lightning-distributed-import.md)
    - [Error Resolution](/tidb-lightning/tidb-lightning-error-resolution.md)
    - [Troubleshooting](/tidb-lightning/troubleshoot-tidb-lightning.md)
    - Reference
      - [Configuration File](/tidb-lightning/tidb-lightning-configuration.md)
      - [Command Line Flags](/tidb-lightning/tidb-lightning-command-line-full.md)
      - [Monitoring](/tidb-lightning/monitor-tidb-lightning.md)
      - [Web Interface](/tidb-lightning/tidb-lightning-web-interface.md)
      - [FAQ](/tidb-lightning/tidb-lightning-faq.md)
      - [Glossary](/tidb-lightning/tidb-lightning-glossary.md)
  - [Dumpling](/dumpling-overview.md)
  - TiCDC
    - [Overview](/ticdc/ticdc-overview.md)
    - [Deploy and Maintain](/ticdc/deploy-ticdc.md)
    - Changefeed
      - [Overview](/ticdc/ticdc-changefeed-overview.md)
      - Create Changefeeds
        - [Replicate Data to MySQL-compatible Databases](/ticdc/ticdc-sink-to-mysql.md)
        - [Replicate Data to Kafka](/ticdc/ticdc-sink-to-kafka.md)
        - [Replicate Data to Pulsar](/ticdc/ticdc-sink-to-pulsar.md)
        - [Replicate Data to Storage Services](/ticdc/ticdc-sink-to-cloud-storage.md)
      - [Manage Changefeeds](/ticdc/ticdc-manage-changefeed.md)
      - [Log Filter](/ticdc/ticdc-filter.md)
      - [DDL Replication](/ticdc/ticdc-ddl.md)
      - [Bidirectional Replication](/ticdc/ticdc-bidirectional-replication.md)
      - [Data Integrity Validation for Single-Row Data](/ticdc/ticdc-integrity-check.md)
      - [Data Consistency Validation for TiDB Upstream/Downstream Clusters](/ticdc/ticdc-upstream-downstream-check.md)
      - [TiCDC Behavior in Splitting UPDATE Events](/ticdc/ticdc-split-update-behavior.md)
    - Monitor and Alert
      - [Monitoring Metrics Summary](/ticdc/ticdc-summary-monitor.md)
      - [Monitoring Metrics Details](/ticdc/monitor-ticdc.md)
      - [Alert Rules](/ticdc/ticdc-alert-rules.md)
    - Reference
      - [Architecture](/ticdc/ticdc-architecture.md)
      - [TiCDC Data Replication Capabilities](/ticdc/ticdc-data-replication-capabilities.md)
      - [TiCDC Server Configurations](/ticdc/ticdc-server-config.md)
      - [TiCDC Changefeed Configurations](/ticdc/ticdc-changefeed-config.md)
      - Output Protocols
        - [TiCDC Avro Protocol](/ticdc/ticdc-avro-protocol.md)
        - [TiCDC Canal-JSON Protocol](/ticdc/ticdc-canal-json.md)
        - [TiCDC Open Protocol](/ticdc/ticdc-open-protocol.md)
        - [TiCDC CSV Protocol](/ticdc/ticdc-csv.md)
      - [TiCDC Open API v2](/ticdc/ticdc-open-api-v2.md)
      - [TiCDC Open API v1](/ticdc/ticdc-open-api.md)
      - TiCDC Data Consumption
        - [TiCDC Row Data Checksum Verification Based on Avro](/ticdc/ticdc-avro-checksum-verification.md)
        - [Guide for Developing a Storage Sink Consumer](/ticdc/ticdc-storage-consumer-dev-guide.md)
      - [Compatibility](/ticdc/ticdc-compatibility.md)
    - [Troubleshoot](/ticdc/troubleshoot-ticdc.md)
    - [FAQs](/ticdc/ticdc-faq.md)
    - [Glossary](/ticdc/ticdc-glossary.md)
  - TiDB Binlog
    - [Overview](/tidb-binlog/tidb-binlog-overview.md)
    - [Quick Start](/tidb-binlog/get-started-with-tidb-binlog.md)
    - [Deploy](/tidb-binlog/deploy-tidb-binlog.md)
    - [Maintain](/tidb-binlog/maintain-tidb-binlog-cluster.md)
    - [Configure](/tidb-binlog/tidb-binlog-configuration-file.md)
      - [Pump](/tidb-binlog/tidb-binlog-configuration-file.md#pump)
      - [Drainer](/tidb-binlog/tidb-binlog-configuration-file.md#drainer)
    - [Upgrade](/tidb-binlog/upgrade-tidb-binlog.md)
    - [Monitor](/tidb-binlog/monitor-tidb-binlog-cluster.md)
    - [Reparo](/tidb-binlog/tidb-binlog-reparo.md)
    - [binlogctl](/tidb-binlog/binlog-control.md)
    - [Binlog Consumer Client](/tidb-binlog/binlog-consumer-client.md)
    - [TiDB Binlog Relay Log](/tidb-binlog/tidb-binlog-relay-log.md)
    - [Bidirectional Replication Between TiDB Clusters](/tidb-binlog/bidirectional-replication-between-tidb-clusters.md)
    - [Glossary](/tidb-binlog/tidb-binlog-glossary.md)
    - Troubleshoot
      - [Troubleshoot](/tidb-binlog/troubleshoot-tidb-binlog.md)
      - [Handle Errors](/tidb-binlog/handle-tidb-binlog-errors.md)
    - [FAQ](/tidb-binlog/tidb-binlog-faq.md)
  - PingCAP Clinic Diagnostic Service
    - [Overview](/clinic/clinic-introduction.md)
    - [Quick Start](/clinic/quick-start-with-clinic.md)
    - [Troubleshoot Clusters Using PingCAP Clinic](/clinic/clinic-user-guide-for-tiup.md)
    - [PingCAP Clinic Diagnostic Data](/clinic/clinic-data-instruction-for-tiup.md)
  - TiSpark
    - [User Guide](/tispark-overview.md)
  - sync-diff-inspector
    - [Overview](/sync-diff-inspector/sync-diff-inspector-overview.md)
    - [Data Check for Tables with Different Schema/Table Names](/sync-diff-inspector/route-diff.md)
    - [Data Check in the Sharding Scenario](/sync-diff-inspector/shard-diff.md)
    - [Data Check in the DM Replication Scenario](/sync-diff-inspector/dm-diff.md)
- Reference
  - Cluster Architecture
    - [Overview](/tidb-architecture.md)
    - [Storage](/tidb-storage.md)
    - [Computing](/tidb-computing.md)
    - [Scheduling](/tidb-scheduling.md)
    - [TSO](/tso.md)
  - Storage Engine - TiKV
    - [TiKV Overview](/tikv-overview.md)
    - [RocksDB Overview](/storage-engine/rocksdb-overview.md)
    - [Titan Overview](/storage-engine/titan-overview.md)
    - [Titan Configuration](/storage-engine/titan-configuration.md)
    - [Partitioned Raft KV](/partitioned-raft-kv.md)
  - Storage Engine - TiFlash
    - [Overview](/tiflash/tiflash-overview.md)
    - [Create TiFlash Replicas](/tiflash/create-tiflash-replicas.md)
    - [Use TiDB to Read TiFlash Replicas](/tiflash/use-tidb-to-read-tiflash.md)
    - [Use TiSpark to Read TiFlash Replicas](/tiflash/use-tispark-to-read-tiflash.md)
    - [Use MPP Mode](/tiflash/use-tiflash-mpp-mode.md)
    - [Use FastScan](/tiflash/use-fastscan.md)
    - [Disaggregated Storage and Compute Architecture and S3 Support](/tiflash/tiflash-disaggregated-and-s3.md)
    - [Supported Push-down Calculations](/tiflash/tiflash-supported-pushdown-calculations.md)
    - [TiFlash Query Result Materialization](/tiflash/tiflash-results-materialization.md)
    - [TiFlash Late Materialization](/tiflash/tiflash-late-materialization.md)
    - [Spill to Disk](/tiflash/tiflash-spill-disk.md)
    - [Data Validation](/tiflash/tiflash-data-validation.md)
    - [MinTSO Scheduler](/tiflash/tiflash-mintso-scheduler.md)
    - [Compatibility](/tiflash/tiflash-compatibility.md)
    - [Pipeline Execution Model](/tiflash/tiflash-pipeline-model.md)
  - TiDB Distributed eXecution Framework (DXF)
    - [Introduction](/tidb-distributed-execution-framework.md)
    - [TiDB Global Sort](/tidb-global-sort.md)
  - [System Variables](/system-variables.md)
  - [Server Status Variables](/status-variables.md)
  - Configuration File Parameters
    - [tidb-server](/tidb-configuration-file.md)
    - [tikv-server](/tikv-configuration-file.md)
    - [tiflash-server](/tiflash/tiflash-configuration.md)
    - [pd-server](/pd-configuration-file.md)
  - CLI
    - [tikv-ctl](/tikv-control.md)
    - [pd-ctl](/pd-control.md)
    - [tidb-ctl](/tidb-control.md)
    - [pd-recover](/pd-recover.md)
  - Command Line Flags
    - [tidb-server](/command-line-flags-for-tidb-configuration.md)
    - [tikv-server](/command-line-flags-for-tikv-configuration.md)
    - [tiflash-server](/tiflash/tiflash-command-line-flags.md)
    - [pd-server](/command-line-flags-for-pd-configuration.md)
  - Key Monitoring Metrics
    - [Overview](/grafana-overview-dashboard.md)
    - [Performance Overview](/grafana-performance-overview-dashboard.md)
    - [TiDB](/grafana-tidb-dashboard.md)
    - [PD](/grafana-pd-dashboard.md)
    - [TiKV](/grafana-tikv-dashboard.md)
    - [TiFlash](/tiflash/monitor-tiflash.md)
    - [TiCDC](/ticdc/monitor-ticdc.md)
    - [Resource Control](/grafana-resource-control-dashboard.md)
  - Privileges
    - [Security Compatibility with MySQL](/security-compatibility-with-mysql.md)
    - [Privilege Management](/privilege-management.md)
    - [User Account Management](/user-account-management.md)
    - [TiDB Password Management](/password-management.md)
    - [Role-Based Access Control](/role-based-access-control.md)
    - [Certificate-Based Authentication](/certificate-authentication.md)
  - SQL
    - SQL Language Structure and Syntax
      - Attributes
        - [AUTO_INCREMENT](/auto-increment.md)
        - [AUTO_RANDOM](/auto-random.md)
        - [SHARD_ROW_ID_BITS](/shard-row-id-bits.md)
      - [Literal Values](/literal-values.md)
      - [Schema Object Names](/schema-object-names.md)
      - [Keywords and Reserved Words](/keywords.md)
      - [User-Defined Variables](/user-defined-variables.md)
      - [Expression Syntax](/expression-syntax.md)
      - [Comment Syntax](/comment-syntax.md)
    - SQL Statements
      - [`ADMIN`](/sql-statements/sql-statement-admin.md)
      - [`ADMIN CANCEL DDL`](/sql-statements/sql-statement-admin-cancel-ddl.md)
      - [`ADMIN CHECKSUM TABLE`](/sql-statements/sql-statement-admin-checksum-table.md)
      - [`ADMIN CHECK [TABLE|INDEX]`](/sql-statements/sql-statement-admin-check-table-index.md)
      - [`ADMIN CLEANUP`](/sql-statements/sql-statement-admin-cleanup.md)
      - [`ADMIN PAUSE DDL`](/sql-statements/sql-statement-admin-pause-ddl.md)
      - [`ADMIN RECOVER INDEX`](/sql-statements/sql-statement-admin-recover.md)
      - [`ADMIN RESUME DDL`](/sql-statements/sql-statement-admin-resume-ddl.md)
      - [`ADMIN SHOW DDL [JOBS|JOB QUERIES]`](/sql-statements/sql-statement-admin-show-ddl.md)
      - [`ADMIN SHOW TELEMETRY`](/sql-statements/sql-statement-admin-show-telemetry.md)
      - [`ALTER DATABASE`](/sql-statements/sql-statement-alter-database.md)
      - [`ALTER INSTANCE`](/sql-statements/sql-statement-alter-instance.md)
      - [`ALTER PLACEMENT POLICY`](/sql-statements/sql-statement-alter-placement-policy.md)
      - [`ALTER RANGE`](/sql-statements/sql-statement-alter-range.md)
      - [`ALTER RESOURCE GROUP`](/sql-statements/sql-statement-alter-resource-group.md)
      - [`ALTER SEQUENCE`](/sql-statements/sql-statement-alter-sequence.md)
      - `ALTER TABLE`
        - [Overview](/sql-statements/sql-statement-alter-table.md)
        - [`ADD COLUMN`](/sql-statements/sql-statement-add-column.md)
        - [`ADD INDEX`](/sql-statements/sql-statement-add-index.md)
        - [`ALTER INDEX`](/sql-statements/sql-statement-alter-index.md)
        - [`CHANGE COLUMN`](/sql-statements/sql-statement-change-column.md)
        - [`COMPACT`](/sql-statements/sql-statement-alter-table-compact.md)
        - [`DROP COLUMN`](/sql-statements/sql-statement-drop-column.md)
        - [`DROP INDEX`](/sql-statements/sql-statement-drop-index.md)
        - [`MODIFY COLUMN`](/sql-statements/sql-statement-modify-column.md)
        - [`RENAME INDEX`](/sql-statements/sql-statement-rename-index.md)
      - [`ALTER USER`](/sql-statements/sql-statement-alter-user.md)
      - [`ANALYZE TABLE`](/sql-statements/sql-statement-analyze-table.md)
      - [`BACKUP`](/sql-statements/sql-statement-backup.md)
      - [`BATCH`](/sql-statements/sql-statement-batch.md)
      - [`BEGIN`](/sql-statements/sql-statement-begin.md)
      - [`CALIBRATE RESOURCE`](/sql-statements/sql-statement-calibrate-resource.md)
      - [`CANCEL IMPORT JOB`](/sql-statements/sql-statement-cancel-import-job.md)
      - [`COMMIT`](/sql-statements/sql-statement-commit.md)
      - [`CHANGE DRAINER`](/sql-statements/sql-statement-change-drainer.md)
      - [`CHANGE PUMP`](/sql-statements/sql-statement-change-pump.md)
      - [`CREATE BINDING`](/sql-statements/sql-statement-create-binding.md)
      - [`CREATE DATABASE`](/sql-statements/sql-statement-create-database.md)
      - [`CREATE INDEX`](/sql-statements/sql-statement-create-index.md)
      - [`CREATE PLACEMENT POLICY`](/sql-statements/sql-statement-create-placement-policy.md)
      - [`CREATE RESOURCE GROUP`](/sql-statements/sql-statement-create-resource-group.md)
      - [`CREATE ROLE`](/sql-statements/sql-statement-create-role.md)
      - [`CREATE SEQUENCE`](/sql-statements/sql-statement-create-sequence.md)
      - [`CREATE TABLE LIKE`](/sql-statements/sql-statement-create-table-like.md)
      - [`CREATE TABLE`](/sql-statements/sql-statement-create-table.md)
      - [`CREATE USER`](/sql-statements/sql-statement-create-user.md)
      - [`CREATE VIEW`](/sql-statements/sql-statement-create-view.md)
      - [`DEALLOCATE`](/sql-statements/sql-statement-deallocate.md)
      - [`DELETE`](/sql-statements/sql-statement-delete.md)
      - [`DESC`](/sql-statements/sql-statement-desc.md)
      - [`DESCRIBE`](/sql-statements/sql-statement-describe.md)
      - [`DO`](/sql-statements/sql-statement-do.md)
      - [`DROP BINDING`](/sql-statements/sql-statement-drop-binding.md)
      - [`DROP DATABASE`](/sql-statements/sql-statement-drop-database.md)
      - [`DROP PLACEMENT POLICY`](/sql-statements/sql-statement-drop-placement-policy.md)
      - [`DROP RESOURCE GROUP`](/sql-statements/sql-statement-drop-resource-group.md)
      - [`DROP ROLE`](/sql-statements/sql-statement-drop-role.md)
      - [`DROP SEQUENCE`](/sql-statements/sql-statement-drop-sequence.md)
      - [`DROP STATS`](/sql-statements/sql-statement-drop-stats.md)
      - [`DROP TABLE`](/sql-statements/sql-statement-drop-table.md)
      - [`DROP USER`](/sql-statements/sql-statement-drop-user.md)
      - [`DROP VIEW`](/sql-statements/sql-statement-drop-view.md)
      - [`EXECUTE`](/sql-statements/sql-statement-execute.md)
      - [`EXPLAIN ANALYZE`](/sql-statements/sql-statement-explain-analyze.md)
      - [`EXPLAIN`](/sql-statements/sql-statement-explain.md)
      - [`FLASHBACK CLUSTER`](/sql-statements/sql-statement-flashback-cluster.md)
      - [`FLASHBACK DATABASE`](/sql-statements/sql-statement-flashback-database.md)
      - [`FLASHBACK TABLE`](/sql-statements/sql-statement-flashback-table.md)
      - [`FLUSH PRIVILEGES`](/sql-statements/sql-statement-flush-privileges.md)
      - [`FLUSH STATUS`](/sql-statements/sql-statement-flush-status.md)
      - [`FLUSH TABLES`](/sql-statements/sql-statement-flush-tables.md)
      - [`GRANT <privileges>`](/sql-statements/sql-statement-grant-privileges.md)
      - [`GRANT <role>`](/sql-statements/sql-statement-grant-role.md)
      - [`IMPORT INTO`](/sql-statements/sql-statement-import-into.md)
      - [`INSERT`](/sql-statements/sql-statement-insert.md)
      - [`KILL`](/sql-statements/sql-statement-kill.md)
      - [`LOAD DATA`](/sql-statements/sql-statement-load-data.md)
      - [`LOAD STATS`](/sql-statements/sql-statement-load-stats.md)
      - [`LOCK STATS`](/sql-statements/sql-statement-lock-stats.md)
      - [`[LOCK|UNLOCK] TABLES`](/sql-statements/sql-statement-lock-tables-and-unlock-tables.md)
      - [`PREPARE`](/sql-statements/sql-statement-prepare.md)
      - [`QUERY WATCH`](/sql-statements/sql-statement-query-watch.md)
      - [`RECOVER TABLE`](/sql-statements/sql-statement-recover-table.md)
      - [`RENAME USER`](/sql-statements/sql-statement-rename-user.md)
      - [`RENAME TABLE`](/sql-statements/sql-statement-rename-table.md)
      - [`REPLACE`](/sql-statements/sql-statement-replace.md)
      - [`RESTORE`](/sql-statements/sql-statement-restore.md)
      - [`REVOKE <privileges>`](/sql-statements/sql-statement-revoke-privileges.md)
      - [`REVOKE <role>`](/sql-statements/sql-statement-revoke-role.md)
      - [`ROLLBACK`](/sql-statements/sql-statement-rollback.md)
      - [`SAVEPOINT`](/sql-statements/sql-statement-savepoint.md)
      - [`SELECT`](/sql-statements/sql-statement-select.md)
      - [`SET DEFAULT ROLE`](/sql-statements/sql-statement-set-default-role.md)
      - [`SET [NAMES|CHARACTER SET]`](/sql-statements/sql-statement-set-names.md)
      - [`SET PASSWORD`](/sql-statements/sql-statement-set-password.md)
      - [`SET RESOURCE GROUP`](/sql-statements/sql-statement-set-resource-group.md)
      - [`SET ROLE`](/sql-statements/sql-statement-set-role.md)
      - [`SET TRANSACTION`](/sql-statements/sql-statement-set-transaction.md)
      - [`SET <variable>`](/sql-statements/sql-statement-set-variable.md)
      - [`SHOW ANALYZE STATUS`](/sql-statements/sql-statement-show-analyze-status.md)
      - [`SHOW [BACKUPS|RESTORES]`](/sql-statements/sql-statement-show-backups.md)
      - [`SHOW BINDINGS`](/sql-statements/sql-statement-show-bindings.md)
      - [`SHOW BUILTINS`](/sql-statements/sql-statement-show-builtins.md)
      - [`SHOW CHARACTER SET`](/sql-statements/sql-statement-show-character-set.md)
      - [`SHOW COLLATION`](/sql-statements/sql-statement-show-collation.md)
      - [`SHOW COLUMNS FROM`](/sql-statements/sql-statement-show-columns-from.md)
      - [`SHOW CONFIG`](/sql-statements/sql-statement-show-config.md)
      - [`SHOW CREATE DATABASE`](/sql-statements/sql-statement-show-create-database.md)
      - [`SHOW CREATE PLACEMENT POLICY`](/sql-statements/sql-statement-show-create-placement-policy.md)
      - [`SHOW CREATE RESOURCE GROUP`](/sql-statements/sql-statement-show-create-resource-group.md)
      - [`SHOW CREATE SEQUENCE`](/sql-statements/sql-statement-show-create-sequence.md)
      - [`SHOW CREATE TABLE`](/sql-statements/sql-statement-show-create-table.md)
      - [`SHOW CREATE USER`](/sql-statements/sql-statement-show-create-user.md)
      - [`SHOW DATABASES`](/sql-statements/sql-statement-show-databases.md)
      - [`SHOW DRAINER STATUS`](/sql-statements/sql-statement-show-drainer-status.md)
      - [`SHOW ENGINES`](/sql-statements/sql-statement-show-engines.md)
      - [`SHOW ERRORS`](/sql-statements/sql-statement-show-errors.md)
      - [`SHOW FIELDS FROM`](/sql-statements/sql-statement-show-fields-from.md)
      - [`SHOW GRANTS`](/sql-statements/sql-statement-show-grants.md)
      - [`SHOW IMPORT JOB`](/sql-statements/sql-statement-show-import-job.md)
      - [`SHOW INDEXES`](/sql-statements/sql-statement-show-indexes.md)
      - [`SHOW MASTER STATUS`](/sql-statements/sql-statement-show-master-status.md)
      - [`SHOW PLACEMENT`](/sql-statements/sql-statement-show-placement.md)
      - [`SHOW PLACEMENT FOR`](/sql-statements/sql-statement-show-placement-for.md)
      - [`SHOW PLACEMENT LABELS`](/sql-statements/sql-statement-show-placement-labels.md)
      - [`SHOW PLUGINS`](/sql-statements/sql-statement-show-plugins.md)
      - [`SHOW PRIVILEGES`](/sql-statements/sql-statement-show-privileges.md)
      - [`SHOW PROCESSLIST`](/sql-statements/sql-statement-show-processlist.md)
      - [`SHOW PROFILES`](/sql-statements/sql-statement-show-profiles.md)
      - [`SHOW PUMP STATUS`](/sql-statements/sql-statement-show-pump-status.md)
      - [`SHOW SCHEMAS`](/sql-statements/sql-statement-show-schemas.md)
      - [`SHOW STATS_HEALTHY`](/sql-statements/sql-statement-show-stats-healthy.md)
      - [`SHOW STATS_HISTOGRAMS`](/sql-statements/sql-statement-show-histograms.md)
      - [`SHOW STATS_LOCKED`](/sql-statements/sql-statement-show-stats-locked.md)
      - [`SHOW STATS_META`](/sql-statements/sql-statement-show-stats-meta.md)
      - [`SHOW STATUS`](/sql-statements/sql-statement-show-status.md)
      - [`SHOW TABLE NEXT_ROW_ID`](/sql-statements/sql-statement-show-table-next-rowid.md)
      - [`SHOW TABLE REGIONS`](/sql-statements/sql-statement-show-table-regions.md)
      - [`SHOW TABLE STATUS`](/sql-statements/sql-statement-show-table-status.md)
      - [`SHOW TABLES`](/sql-statements/sql-statement-show-tables.md)
      - [`SHOW VARIABLES`](/sql-statements/sql-statement-show-variables.md)
      - [`SHOW WARNINGS`](/sql-statements/sql-statement-show-warnings.md)
      - [`SHUTDOWN`](/sql-statements/sql-statement-shutdown.md)
      - [`SPLIT REGION`](/sql-statements/sql-statement-split-region.md)
      - [`START TRANSACTION`](/sql-statements/sql-statement-start-transaction.md)
      - [`TABLE`](/sql-statements/sql-statement-table.md)
      - [`TRACE`](/sql-statements/sql-statement-trace.md)
      - [`TRUNCATE`](/sql-statements/sql-statement-truncate.md)
      - [`UNLOCK STATS`](/sql-statements/sql-statement-unlock-stats.md)
      - [`UPDATE`](/sql-statements/sql-statement-update.md)
      - [`USE`](/sql-statements/sql-statement-use.md)
      - [`WITH`](/sql-statements/sql-statement-with.md)
    - Data Types
      - [Overview](/data-type-overview.md)
      - [Default Values](/data-type-default-values.md)
      - [Numeric Types](/data-type-numeric.md)
      - [Date and Time Types](/data-type-date-and-time.md)
      - [String Types](/data-type-string.md)
      - [JSON Type](/data-type-json.md)
    - Functions and Operators
      - [Overview](/functions-and-operators/functions-and-operators-overview.md)
      - [Type Conversion in Expression Evaluation](/functions-and-operators/type-conversion-in-expression-evaluation.md)
      - [Operators](/functions-and-operators/operators.md)
      - [Control Flow Functions](/functions-and-operators/control-flow-functions.md)
      - [String Functions](/functions-and-operators/string-functions.md)
      - [Numeric Functions and Operators](/functions-and-operators/numeric-functions-and-operators.md)
      - [Date and Time Functions](/functions-and-operators/date-and-time-functions.md)
      - [Bit Functions and Operators](/functions-and-operators/bit-functions-and-operators.md)
      - [Cast Functions and Operators](/functions-and-operators/cast-functions-and-operators.md)
      - [Encryption and Compression Functions](/functions-and-operators/encryption-and-compression-functions.md)
      - [Locking Functions](/functions-and-operators/locking-functions.md)
      - [Information Functions](/functions-and-operators/information-functions.md)
      - [JSON Functions](/functions-and-operators/json-functions.md)
      - [Aggregate (GROUP BY) Functions](/functions-and-operators/aggregate-group-by-functions.md)
      - [GROUP BY Modifiers](/functions-and-operators/group-by-modifier.md)
      - [Window Functions](/functions-and-operators/window-functions.md)
      - [Miscellaneous Functions](/functions-and-operators/miscellaneous-functions.md)
      - [Precision Math](/functions-and-operators/precision-math.md)
      - [Set Operations](/functions-and-operators/set-operators.md)
      - [Sequence Functions](/functions-and-operators/sequence-functions.md)
      - [List of Expressions for Pushdown](/functions-and-operators/expressions-pushed-down.md)
      - [TiDB Specific Functions](/functions-and-operators/tidb-functions.md)
      - [Comparisons between Functions and Syntax of Oracle and TiDB](/oracle-functions-to-tidb.md)
    - [Clustered Indexes](/clustered-indexes.md)
    - [Constraints](/constraints.md)
    - [Generated Columns](/generated-columns.md)
    - [SQL Mode](/sql-mode.md)
    - [Table Attributes](/table-attributes.md)
    - Transactions
      - [Overview](/transaction-overview.md)
      - [Isolation Levels](/transaction-isolation-levels.md)
      - [Optimistic Transactions](/optimistic-transaction.md)
      - [Pessimistic Transactions](/pessimistic-transaction.md)
      - [Non-Transactional DML Statements](/non-transactional-dml.md)
    - [Views](/views.md)
    - [Partitioning](/partitioned-table.md)
    - [Temporary Tables](/temporary-tables.md)
    - [Cached Tables](/cached-tables.md)
    - [FOREIGN KEY Constraints](/foreign-key.md)
    - Character Set and Collation
      - [Overview](/character-set-and-collation.md)
      - [GBK](/character-set-gbk.md)
    - [Placement Rules in SQL](/placement-rules-in-sql.md)
    - System Tables
      - [`mysql`](/mysql-schema.md)
      - INFORMATION_SCHEMA
        - [Overview](/information-schema/information-schema.md)
        - [`ANALYZE_STATUS`](/information-schema/information-schema-analyze-status.md)
        - [`CHECK_CONSTRAINTS`](/information-schema/information-schema-check-constraints.md)
        - [`CLIENT_ERRORS_SUMMARY_BY_HOST`](/information-schema/client-errors-summary-by-host.md)
        - [`CLIENT_ERRORS_SUMMARY_BY_USER`](/information-schema/client-errors-summary-by-user.md)
        - [`CLIENT_ERRORS_SUMMARY_GLOBAL`](/information-schema/client-errors-summary-global.md)
        - [`CHARACTER_SETS`](/information-schema/information-schema-character-sets.md)
        - [`CLUSTER_CONFIG`](/information-schema/information-schema-cluster-config.md)
        - [`CLUSTER_HARDWARE`](/information-schema/information-schema-cluster-hardware.md)
        - [`CLUSTER_INFO`](/information-schema/information-schema-cluster-info.md)
        - [`CLUSTER_LOAD`](/information-schema/information-schema-cluster-load.md)
        - [`CLUSTER_LOG`](/information-schema/information-schema-cluster-log.md)
        - [`CLUSTER_SYSTEMINFO`](/information-schema/information-schema-cluster-systeminfo.md)
        - [`COLLATIONS`](/information-schema/information-schema-collations.md)
        - [`COLLATION_CHARACTER_SET_APPLICABILITY`](/information-schema/information-schema-collation-character-set-applicability.md)
        - [`COLUMNS`](/information-schema/information-schema-columns.md)
        - [`DATA_LOCK_WAITS`](/information-schema/information-schema-data-lock-waits.md)
        - [`DDL_JOBS`](/information-schema/information-schema-ddl-jobs.md)
        - [`DEADLOCKS`](/information-schema/information-schema-deadlocks.md)
        - [`ENGINES`](/information-schema/information-schema-engines.md)
        - [`INSPECTION_RESULT`](/information-schema/information-schema-inspection-result.md)
        - [`INSPECTION_RULES`](/information-schema/information-schema-inspection-rules.md)
        - [`INSPECTION_SUMMARY`](/information-schema/information-schema-inspection-summary.md)
        - [`KEYWORDS`](/information-schema/information-schema-keywords.md)
        - [`KEY_COLUMN_USAGE`](/information-schema/information-schema-key-column-usage.md)
        - [`MEMORY_USAGE`](/information-schema/information-schema-memory-usage.md)
        - [`MEMORY_USAGE_OPS_HISTORY`](/information-schema/information-schema-memory-usage-ops-history.md)
        - [`METRICS_SUMMARY`](/information-schema/information-schema-metrics-summary.md)
        - [`METRICS_TABLES`](/information-schema/information-schema-metrics-tables.md)
        - [`PARTITIONS`](/information-schema/information-schema-partitions.md)
        - [`PLACEMENT_POLICIES`](/information-schema/information-schema-placement-policies.md)
        - [`PROCESSLIST`](/information-schema/information-schema-processlist.md)
        - [`REFERENTIAL_CONSTRAINTS`](/information-schema/information-schema-referential-constraints.md)
        - [`RESOURCE_GROUPS`](/information-schema/information-schema-resource-groups.md)
        - [`RUNAWAY_WATCHES`](/information-schema/information-schema-runaway-watches.md)
        - [`SCHEMATA`](/information-schema/information-schema-schemata.md)
        - [`SEQUENCES`](/information-schema/information-schema-sequences.md)
        - [`SESSION_VARIABLES`](/information-schema/information-schema-session-variables.md)
        - [`SLOW_QUERY`](/information-schema/information-schema-slow-query.md)
        - [`STATISTICS`](/information-schema/information-schema-statistics.md)
        - [`TABLES`](/information-schema/information-schema-tables.md)
        - [`TABLE_CONSTRAINTS`](/information-schema/information-schema-table-constraints.md)
        - [`TABLE_STORAGE_STATS`](/information-schema/information-schema-table-storage-stats.md)
        - [`TIDB_HOT_REGIONS`](/information-schema/information-schema-tidb-hot-regions.md)
        - [`TIDB_HOT_REGIONS_HISTORY`](/information-schema/information-schema-tidb-hot-regions-history.md)
        - [`TIDB_INDEXES`](/information-schema/information-schema-tidb-indexes.md)
        - [`TIDB_SERVERS_INFO`](/information-schema/information-schema-tidb-servers-info.md)
        - [`TIDB_TRX`](/information-schema/information-schema-tidb-trx.md)
        - [`TIFLASH_REPLICA`](/information-schema/information-schema-tiflash-replica.md)
        - [`TIFLASH_SEGMENTS`](/information-schema/information-schema-tiflash-segments.md)
        - [`TIFLASH_TABLES`](/information-schema/information-schema-tiflash-tables.md)
        - [`TIKV_REGION_PEERS`](/information-schema/information-schema-tikv-region-peers.md)
        - [`TIKV_REGION_STATUS`](/information-schema/information-schema-tikv-region-status.md)
        - [`TIKV_STORE_STATUS`](/information-schema/information-schema-tikv-store-status.md)
        - [`USER_ATTRIBUTES`](/information-schema/information-schema-user-attributes.md)
        - [`USER_PRIVILEGES`](/information-schema/information-schema-user-privileges.md)
        - [`VARIABLES_INFO`](/information-schema/information-schema-variables-info.md)
        - [`VIEWS`](/information-schema/information-schema-views.md)
      - [`METRICS_SCHEMA`](/metrics-schema.md)
      - PERFORMANCE_SCHEMA
        - [Overview](/performance-schema/performance-schema.md)
        - [`SESSION_CONNECT_ATTRS`](/performance-schema/performance-schema-session-connect-attrs.md)
    - [Metadata Lock](/metadata-lock.md)
  - [Telemetry](/telemetry.md)
  - [Error Codes](/error-codes.md)
  - [Table Filter](/table-filter.md)
  - [Schedule Replicas by Topology Labels](/schedule-replicas-by-topology-labels.md)
  - [URI Formats of External Storage Services](/external-storage-uri.md)
- FAQs
  - [FAQ Summary](/faq/faq-overview.md)
  - [TiDB FAQs](/faq/tidb-faq.md)
  - [SQL FAQs](/faq/sql-faq.md)
  - [Deployment FAQs](/faq/deploy-and-maintain-faq.md)
  - [Migration FAQs](/faq/migration-tidb-faq.md)
  - [Upgrade FAQs](/faq/upgrade-faq.md)
  - [Monitoring FAQs](/faq/monitor-faq.md)
  - [Cluster Management FAQs](/faq/manage-cluster-faq.md)
  - [High Availability FAQs](/faq/high-availability-faq.md)
  - [High Reliability FAQs](/faq/high-reliability-faq.md)
  - [Backup and Restore FAQs](/faq/backup-and-restore-faq.md)
- Release Notes
  - [All Releases](/releases/release-notes.md)
  - [Release Timeline](/releases/release-timeline.md)
  - [TiDB Versioning](/releases/versioning.md)
  - [TiDB Installation Packages](/binary-package.md)
  - v7.5
    - [7.5.7](/releases/release-7.5.7.md)
    - [7.5.6](/releases/release-7.5.6.md)
    - [7.5.5](/releases/release-7.5.5.md)
    - [7.5.4](/releases/release-7.5.4.md)
    - [7.5.3](/releases/release-7.5.3.md)
    - [7.5.2](/releases/release-7.5.2.md)
    - [7.5.1](/releases/release-7.5.1.md)
    - [7.5.0](/releases/release-7.5.0.md)
  - v7.4
    - [7.4.0-DMR](/releases/release-7.4.0.md)
  - v7.3
    - [7.3.0-DMR](/releases/release-7.3.0.md)
  - v7.2
    - [7.2.0-DMR](/releases/release-7.2.0.md)
  - v7.1
    - [7.1.6](/releases/release-7.1.6.md)
    - [7.1.5](/releases/release-7.1.5.md)
    - [7.1.4](/releases/release-7.1.4.md)
    - [7.1.3](/releases/release-7.1.3.md)
    - [7.1.2](/releases/release-7.1.2.md)
    - [7.1.1](/releases/release-7.1.1.md)
    - [7.1.0](/releases/release-7.1.0.md)
  - v7.0
    - [7.0.0-DMR](/releases/release-7.0.0.md)
  - v6.6
    - [6.6.0-DMR](/releases/release-6.6.0.md)
  - v6.5
    - [6.5.12](/releases/release-6.5.12.md)
    - [6.5.11](/releases/release-6.5.11.md)
    - [6.5.10](/releases/release-6.5.10.md)
    - [6.5.9](/releases/release-6.5.9.md)
    - [6.5.8](/releases/release-6.5.8.md)
    - [6.5.7](/releases/release-6.5.7.md)
    - [6.5.6](/releases/release-6.5.6.md)
    - [6.5.5](/releases/release-6.5.5.md)
    - [6.5.4](/releases/release-6.5.4.md)
    - [6.5.3](/releases/release-6.5.3.md)
    - [6.5.2](/releases/release-6.5.2.md)
    - [6.5.1](/releases/release-6.5.1.md)
    - [6.5.0](/releases/release-6.5.0.md)
  - v6.4
    - [6.4.0-DMR](/releases/release-6.4.0.md)
  - v6.3
    - [6.3.0-DMR](/releases/release-6.3.0.md)
  - v6.2
    - [6.2.0-DMR](/releases/release-6.2.0.md)
  - v6.1
    - [6.1.7](/releases/release-6.1.7.md)
    - [6.1.6](/releases/release-6.1.6.md)
    - [6.1.5](/releases/release-6.1.5.md)
    - [6.1.4](/releases/release-6.1.4.md)
    - [6.1.3](/releases/release-6.1.3.md)
    - [6.1.2](/releases/release-6.1.2.md)
    - [6.1.1](/releases/release-6.1.1.md)
    - [6.1.0](/releases/release-6.1.0.md)
  - v6.0
    - [6.0.0-DMR](/releases/release-6.0.0-dmr.md)
  - v5.4
    - [5.4.3](/releases/release-5.4.3.md)
    - [5.4.2](/releases/release-5.4.2.md)
    - [5.4.1](/releases/release-5.4.1.md)
    - [5.4.0](/releases/release-5.4.0.md)
  - v5.3
    - [5.3.4](/releases/release-5.3.4.md)
    - [5.3.3](/releases/release-5.3.3.md)
    - [5.3.2](/releases/release-5.3.2.md)
    - [5.3.1](/releases/release-5.3.1.md)
    - [5.3.0](/releases/release-5.3.0.md)
  - v5.2
    - [5.2.4](/releases/release-5.2.4.md)
    - [5.2.3](/releases/release-5.2.3.md)
    - [5.2.2](/releases/release-5.2.2.md)
    - [5.2.1](/releases/release-5.2.1.md)
    - [5.2.0](/releases/release-5.2.0.md)
  - v5.1
    - [5.1.5](/releases/release-5.1.5.md)
    - [5.1.4](/releases/release-5.1.4.md)
    - [5.1.3](/releases/release-5.1.3.md)
    - [5.1.2](/releases/release-5.1.2.md)
    - [5.1.1](/releases/release-5.1.1.md)
    - [5.1.0](/releases/release-5.1.0.md)
  - v5.0
    - [5.0.6](/releases/release-5.0.6.md)
    - [5.0.5](/releases/release-5.0.5.md)
    - [5.0.4](/releases/release-5.0.4.md)
    - [5.0.3](/releases/release-5.0.3.md)
    - [5.0.2](/releases/release-5.0.2.md)
    - [5.0.1](/releases/release-5.0.1.md)
    - [5.0 GA](/releases/release-5.0.0.md)
    - [5.0.0-rc](/releases/release-5.0.0-rc.md)
  - v4.0
    - [4.0.16](/releases/release-4.0.16.md)
    - [4.0.15](/releases/release-4.0.15.md)
    - [4.0.14](/releases/release-4.0.14.md)
    - [4.0.13](/releases/release-4.0.13.md)
    - [4.0.12](/releases/release-4.0.12.md)
    - [4.0.11](/releases/release-4.0.11.md)
    - [4.0.10](/releases/release-4.0.10.md)
    - [4.0.9](/releases/release-4.0.9.md)
    - [4.0.8](/releases/release-4.0.8.md)
    - [4.0.7](/releases/release-4.0.7.md)
    - [4.0.6](/releases/release-4.0.6.md)
    - [4.0.5](/releases/release-4.0.5.md)
    - [4.0.4](/releases/release-4.0.4.md)
    - [4.0.3](/releases/release-4.0.3.md)
    - [4.0.2](/releases/release-4.0.2.md)
    - [4.0.1](/releases/release-4.0.1.md)
    - [4.0 GA](/releases/release-4.0-ga.md)
    - [4.0.0-rc.2](/releases/release-4.0.0-rc.2.md)
    - [4.0.0-rc.1](/releases/release-4.0.0-rc.1.md)
    - [4.0.0-rc](/releases/release-4.0.0-rc.md)
    - [4.0.0-beta.2](/releases/release-4.0.0-beta.2.md)
    - [4.0.0-beta.1](/releases/release-4.0.0-beta.1.md)
    - [4.0.0-beta](/releases/release-4.0.0-beta.md)
  - v3.1
    - [3.1.2](/releases/release-3.1.2.md)
    - [3.1.1](/releases/release-3.1.1.md)
    - [3.1.0 GA](/releases/release-3.1.0-ga.md)
    - [3.1.0-rc](/releases/release-3.1.0-rc.md)
    - [3.1.0-beta.2](/releases/release-3.1.0-beta.2.md)
    - [3.1.0-beta.1](/releases/release-3.1.0-beta.1.md)
    - [3.1.0-beta](/releases/release-3.1.0-beta.md)
  - v3.0
    - [3.0.20](/releases/release-3.0.20.md)
    - [3.0.19](/releases/release-3.0.19.md)
    - [3.0.18](/releases/release-3.0.18.md)
    - [3.0.17](/releases/release-3.0.17.md)
    - [3.0.16](/releases/release-3.0.16.md)
    - [3.0.15](/releases/release-3.0.15.md)
    - [3.0.14](/releases/release-3.0.14.md)
    - [3.0.13](/releases/release-3.0.13.md)
    - [3.0.12](/releases/release-3.0.12.md)
    - [3.0.11](/releases/release-3.0.11.md)
    - [3.0.10](/releases/release-3.0.10.md)
    - [3.0.9](/releases/release-3.0.9.md)
    - [3.0.8](/releases/release-3.0.8.md)
    - [3.0.7](/releases/release-3.0.7.md)
    - [3.0.6](/releases/release-3.0.6.md)
    - [3.0.5](/releases/release-3.0.5.md)
    - [3.0.4](/releases/release-3.0.4.md)
    - [3.0.3](/releases/release-3.0.3.md)
    - [3.0.2](/releases/release-3.0.2.md)
    - [3.0.1](/releases/release-3.0.1.md)
    - [3.0 GA](/releases/release-3.0-ga.md)
    - [3.0.0-rc.3](/releases/release-3.0.0-rc.3.md)
    - [3.0.0-rc.2](/releases/release-3.0.0-rc.2.md)
    - [3.0.0-rc.1](/releases/release-3.0.0-rc.1.md)
    - [3.0.0-beta.1](/releases/release-3.0.0-beta.1.md)
    - [3.0.0-beta](/releases/release-3.0-beta.md)
  - v2.1
    - [2.1.19](/releases/release-2.1.19.md)
    - [2.1.18](/releases/release-2.1.18.md)
    - [2.1.17](/releases/release-2.1.17.md)
    - [2.1.16](/releases/release-2.1.16.md)
    - [2.1.15](/releases/release-2.1.15.md)
    - [2.1.14](/releases/release-2.1.14.md)
    - [2.1.13](/releases/release-2.1.13.md)
    - [2.1.12](/releases/release-2.1.12.md)
    - [2.1.11](/releases/release-2.1.11.md)
    - [2.1.10](/releases/release-2.1.10.md)
    - [2.1.9](/releases/release-2.1.9.md)
    - [2.1.8](/releases/release-2.1.8.md)
    - [2.1.7](/releases/release-2.1.7.md)
    - [2.1.6](/releases/release-2.1.6.md)
    - [2.1.5](/releases/release-2.1.5.md)
    - [2.1.4](/releases/release-2.1.4.md)
    - [2.1.3](/releases/release-2.1.3.md)
    - [2.1.2](/releases/release-2.1.2.md)
    - [2.1.1](/releases/release-2.1.1.md)
    - [2.1 GA](/releases/release-2.1-ga.md)
    - [2.1 RC5](/releases/release-2.1-rc.5.md)
    - [2.1 RC4](/releases/release-2.1-rc.4.md)
    - [2.1 RC3](/releases/release-2.1-rc.3.md)
    - [2.1 RC2](/releases/release-2.1-rc.2.md)
    - [2.1 RC1](/releases/release-2.1-rc.1.md)
    - [2.1 Beta](/releases/release-2.1-beta.md)
  - v2.0
    - [2.0.11](/releases/release-2.0.11.md)
    - [2.0.10](/releases/release-2.0.10.md)
    - [2.0.9](/releases/release-2.0.9.md)
    - [2.0.8](/releases/release-2.0.8.md)
    - [2.0.7](/releases/release-2.0.7.md)
    - [2.0.6](/releases/release-2.0.6.md)
    - [2.0.5](/releases/release-2.0.5.md)
    - [2.0.4](/releases/release-2.0.4.md)
    - [2.0.3](/releases/release-2.0.3.md)
    - [2.0.2](/releases/release-2.0.2.md)
    - [2.0.1](/releases/release-2.0.1.md)
    - [2.0](/releases/release-2.0-ga.md)
    - [2.0 RC5](/releases/release-2.0-rc.5.md)
    - [2.0 RC4](/releases/release-2.0-rc.4.md)
    - [2.0 RC3](/releases/release-2.0-rc.3.md)
    - [2.0 RC1](/releases/release-2.0-rc.1.md)
    - [1.1 Beta](/releases/release-1.1-beta.md)
    - [1.1 Alpha](/releases/release-1.1-alpha.md)
  - v1.0
    - [1.0.8](/releases/release-1.0.8.md)
    - [1.0.7](/releases/release-1.0.7.md)
    - [1.0.6](/releases/release-1.0.6.md)
    - [1.0.5](/releases/release-1.0.5.md)
    - [1.0.4](/releases/release-1.0.4.md)
    - [1.0.3](/releases/release-1.0.3.md)
    - [1.0.2](/releases/release-1.0.2.md)
    - [1.0.1](/releases/release-1.0.1.md)
    - [1.0](/releases/release-1.0-ga.md)
    - [Pre-GA](/releases/release-pre-ga.md)
    - [RC4](/releases/release-rc.4.md)
    - [RC3](/releases/release-rc.3.md)
    - [RC2](/releases/release-rc.2.md)
    - [RC1](/releases/release-rc.1.md)
- [Glossary](/glossary.md)
